--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "myvenv\\Scripts\\python.exe"
+    "python.pythonPath": "todovenv\\Scripts\\python.exe"
 }
